--- a/styles/globals.css
+++ b/styles/globals.css
@@ -466,7 +466,7 @@
 
 
 
-@media (max-width: 1024px) and (min-width: 769px) {
+@media (min-width: 1024px) {
   
 .headerNew {
   gap: 10rem;
@@ -482,7 +482,7 @@
 
 
 .LogoIMg{
-  width:12vw
+  width: 10vw;
 }
 
 .card{
@@ -493,7 +493,7 @@
 }
 
 
-@media (max-width: 1440px) and (min-width: 769px) {
+ @media (min-width: 1440px) {
   
   .headerNew {
     gap: 26rem;
