--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,120 @@
   src: local("josefin"),
     url(../assets/Fonts/josefin/JosefinSans-SemiBold.woff) format("woff");
 }
+@font-face {
+  font-family: "Montserrat";
+  src: local("Montserrat"),
+    url(../assets/Fonts/Montserrat/Montserrat-Black.ttf) format("woff");
+}
+
+
+.emailaddress{
+  width: 151px;
+height: 12px;
+ 
+font-family: 'josefin';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 100%;
+/* identical to box height, or 12px */
+
+letter-spacing: 0.1em;
+color: #787878;
+ }
+
+
+
+ .GetinTouch{
+  width: 284px;
+height: 40px;
+
+font-family: 'josefin';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+/* identical to box height, or 40px */
+
+letter-spacing: 0.1em;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+ }
+
+
+
+.mobile{
+  
+width: 61px;
+height: 16px;
+margin-top:32px;
+margin-bottom:12px;
+font-family: 'josefin';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 100%;
+/* identical to box height, or 16px */
+
+letter-spacing: 0.1em;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+
+.email{
+  
+  width: 50px;
+  height: 16px;
+  margin-top: 32px;
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  /* identical to box height, or 16px */
+  
+  letter-spacing: 0.1em;
+  
+  color: #000000;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+
+}
+
+
+
+
+
+
+.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+
+
+
+
 
 .heroImg {
   width: 100vw;
@@ -108,7 +222,7 @@
 .one {
   height: 30vh;
   width: 16vw;
-  background-image: url("../assets/Images/one1.png");
+  background-image: url("../assets/Images/Apartment\ 1.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -116,14 +230,14 @@
 .two {
   height: 30vh;
   width: 16vw;
-  background-image: url("../assets/Images/two2.png");
+  background-image: url("../assets/Images/Apartment\ 11.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 .three {
   height: 30vh;
   width: 16vw;
-  background-image: url("../assets/Images/three3.png");
+  background-image: url("../assets/Images/Apartment\ 14.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -131,7 +245,63 @@
 .four {
   height: 30vh;
   width: 16vw;
-  background-image: url("../assets/Images/four4.png");
+  background-image: url("../assets/Images/Apartment\ 4.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.five {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/Apartment\ 18.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.eight {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/Apartment\ 19.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.six {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/Apartment\ 7.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.seven {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/Apartment\ 8.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.nine{
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/five.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.ten {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/four.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.elevan {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/three.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+.twelve {
+  height: 30vh;
+  width: 16vw;
+  background-image: url("../assets/Images/two.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -172,7 +342,145 @@
     padding-left: 5px;
     height: 12vh;
     z-index: 40;
+
+
+
   }
+
+
+  .GetinTouch{
+    width: 284px;
+height: 40px;
+
+font-family: 'josefin';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+/* identical to box height, or 40px */
+
+letter-spacing: 0.1em;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+   }
+  
+
+
+
+
+  .emailaddress{
+    width: 151px;
+  height: 12px;
+   
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+  /* identical to box height, or 12px */
+  
+  letter-spacing: 0.1em;
+  color: #787878;
+   }
+  
+  
+  .mobile{
+    
+  width: 61px;
+  height: 16px;
+  margin-top:32px;
+  margin-bottom:12px;
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  /* identical to box height, or 16px */
+  
+  letter-spacing: 0.1em;
+  
+  color: #000000;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  
+  }
+  
+  .email{
+    
+    width: 50px;
+    height: 16px;
+    margin-top: 32px;
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    /* identical to box height, or 16px */
+    
+    letter-spacing: 0.1em;
+    
+    color: #000000;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  
+  }
+  
+
+
+  .carousel .control-dots {
+    position: absolute;
+    bottom: 60;
+    margin: 28px 0;
+    padding: 0;
+    text-align: center;
+    width: 14vw;
+    height: 14vh;
+    z-index: 3;
+    left: -36rem;
+  }
+  
+ 
+  
+  .carousel .control-dots .dot {
+   
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 90%);
+   
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 3px 13px;
+}
+
+
+  
+
+.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+  
   
   .LogoIMg{
      padding-top:1.8rem;
@@ -442,6 +750,45 @@
   .newSliding {
     display: none;
   }
+
+
+
+  .carousel .control-dots {
+    position: absolute;
+    bottom: 60;
+    margin: 28px 0;
+    padding: 0;
+    text-align: center;
+    width: 14vw;
+    height: 14vh;
+    z-index: 3;
+    left: -36rem;
+  }
+  
+  
+  .carousel .control-dots .dot {
+   
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 90%);
+   
+    border-radius: 50%;
+    width: 14vw;
+    height: 14vh;
+    cursor: pointer;
+    display: inline-block;
+    margin: 3px 13px;
+}
+
+
+  
+
+.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+  
 }
 
 @keyframes Slide {
@@ -464,9 +811,190 @@
   }
 }
 
-
+ 
 
 @media (min-width: 1024px) {
+
+  .herotextTabP2{
+   
+    height: 24px;
+    
+    font-family: '';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    /* identical to box height, or 24px */
+    
+    letter-spacing: 0.05em;
+    
+    color: #FFFFFF;
+
+  }
+  .herotextTabP1{
+   
+    height: 64px;
+    margin-bottom:5rem;
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 64px;
+    /* identical to box height */
+    
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+
+
+
+  .emailaddress{
+    width: 151px;
+  height: 12px;
+   
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+  /* identical to box height, or 12px */
+  
+  letter-spacing: 0.1em;
+  color: #787878;
+   }
+  
+  
+  .mobile{
+    
+  width: 61px;
+  height: 16px;
+  margin-top:32px;
+  margin-bottom:12px;
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  /* identical to box height, or 16px */
+  
+  letter-spacing: 0.1em;
+  
+  color: #000000;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  
+  }
+  
+  .email{
+    
+    width: 50px;
+    height: 16px;
+    margin-top: 32px;
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    /* identical to box height, or 16px */
+    
+    letter-spacing: 0.1em;
+    
+    color: #000000;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  
+  }
+  
+
+
+.emailaddress{
+width: 151px;
+height: 12px;
+
+font-family: 'josefin';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 100%;
+/* identical to box height, or 12px */
+
+letter-spacing: 0.1em;
+
+color: #787878;
+  }
+
+
+  .carousel .control-dots {
+    position: absolute;
+    top: 45rem;
+    margin: 28px 0;
+    padding: 0;
+    text-align: center;
+    width: 101%;
+    z-index: 3;
+    left: -36rem;
+  }
+  
+  
+  
+  .carousel .control-dots .dot {
+    border: 12px solid orange;
+    color: #f0b342;
+    font-size: xx-large;
+    width: 32px;
+    height:32px;
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    background-color: #f0b342;
+    
+    border-radius: 50%;
+    
+    cursor: pointer;
+    display: inline-block;
+    margin: 32px 14px;
+    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+  }
+
+
+  
+
+.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+    opacity: 2;
+    filter: alpha(opacity=100);
+}
+  
+  
+ 
+
+  
+
+
+
+
+
+
+  
+  
+  
   
 .headerNew {
   gap: 10rem;
@@ -494,6 +1022,218 @@
 
 
  @media (min-width: 1440px) {
+
+
+
+  .herotextTabP2{
+   
+    height: 24px;
+    
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    /* identical to box height, or 24px */
+    
+    letter-spacing: 0.05em;
+    
+    color: #FFFFFF;
+
+  }
+
+
+  .herotextTabP1{
+   
+    height: 64px;
+    margin-bottom:2rem;
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 64px;
+    /* identical to box height */
+    
+    
+    color: #FFFFFF;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+
+
+  .emailaddress{
+    width: 151px;
+  height: 12px;
+   
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+  /* identical to box height, or 12px */
+  
+  letter-spacing: 0.1em;
+  color: #787878;
+   }
+  
+  
+  .mobile{
+    
+  width: 61px;
+  height: 16px;
+  margin-top:32px;
+  margin-bottom:12px;
+  font-family: 'josefin';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 100%;
+  /* identical to box height, or 16px */
+  
+  letter-spacing: 0.1em;
+  
+  color: #000000;
+  
+  
+  /* Inside auto layout */
+  
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  
+  }
+  
+  .email{
+    
+    width: 50px;
+    height: 16px;
+    margin-top: 32px;
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    /* identical to box height, or 16px */
+    
+    letter-spacing: 0.1em;
+    
+    color: #000000;
+    
+    
+    /* Inside auto layout */
+    
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  
+  }
+  
+
+
+  .emailaddress{
+    width: 151px;
+    height: 12px;
+    
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 100%;
+    /* identical to box height, or 12px */
+    
+    letter-spacing: 0.1em;
+    
+    color: #787878;
+      }
+  .number{
+    width: 151px;
+    height: 12px;
+    
+    font-family: 'josefin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 100%;
+    /* identical to box height, or 12px */
+    
+    letter-spacing: 0.1em;
+    
+    color: #787878;
+      }
+
+  
+   .GetinTouch{
+    width: 284px;
+height: 40px;
+
+font-family: 'josefin';
+font-style: normal;
+font-weight: 700;
+font-size: 40px;
+line-height: 100%;
+/* identical to box height, or 40px */
+
+letter-spacing: 0.1em;
+
+color: #000000;
+
+
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+ }
+  
+  .carousel .control-dots {
+    position: absolute;
+    top: 45rem;
+    margin: 28px 0;
+    padding: 0;
+    text-align: center;
+    width: 101%;
+    z-index: 3;
+  
+  }
+  
+  
+  
+  .carousel .control-dots .dot {
+    border: 12px solid orange;
+    color: #f0b342;
+    font-size: xx-large;
+    width: 32px;
+    height:32px;
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    background-color: #f0b342;
+    
+    border-radius: 50%;
+    
+    cursor: pointer;
+    display: inline-block;
+    margin: 32px 14px;
+    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+  }
+
+
+  
+
+.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+    opacity: 2;
+    filter: alpha(opacity=100);
+}
+  
+  
+  
+  
   
   .headerNew {
     gap: 26rem;
@@ -515,6 +1255,34 @@
   .card{
     margin-left:12.5rem;
   }
+
+  .carousel .control-dots {
+    position: absolute;
+    bottom: 0;
+    margin: 28px 0;
+    padding: 0;
+    text-align: center;
+    width: 101%;
+    z-index: 3;
+    left: -36rem;
+  }
+  
+  
+  .carousel .control-dots .dot {
+    transition: opacity .25s ease-in;
+    opacity: .3;
+    filter: alpha(opacity=30);
+    /* box-shadow: 1px 1px 2px rgb(0 0 0 / 90%); */
+    background: orange;
+    border-radius: 50%;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+    display: inline-block;
+    margin: 5px 14px;
+    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+  }
+  
   
   
   }
