--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@
 .emailaddress {
   width: 151px;
   height: 12px;
-
+  margin-top: 12px;
   font-family: 'josefin';
   font-style: normal;
   font-weight: 400;
@@ -409,7 +409,7 @@
   .emailaddress {
     width: 151px;
     height: 12px;
-
+    margin-top: 12px;
     font-family: 'josefin';
     font-style: normal;
     font-weight: 400;
@@ -909,7 +909,7 @@
   .emailaddress {
     width: 151px;
     height: 12px;
-
+     margin-top: 12px;
     font-family: 'josefin';
     font-style: normal;
     font-weight: 400;
@@ -978,7 +978,7 @@
   .emailaddress {
     width: 151px;
     height: 12px;
-
+    margin-top: 12px;
     font-family: 'josefin';
     font-style: normal;
     font-weight: 400;
@@ -1113,7 +1113,7 @@
   .emailaddress {
     width: 151px;
     height: 12px;
-
+    margin-top: 12px;
     font-family: 'josefin';
     font-style: normal;
     font-weight: 400;
@@ -1182,7 +1182,7 @@
   .emailaddress {
     width: 151px;
     height: 12px;
-
+    margin-top: 12px;
     font-family: 'josefin';
     font-style: normal;
     font-weight: 400;
