--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,46 +26,25 @@
     url(../assets/Fonts/futura/Futura\ Bold\ font.ttf) format("woff");
 }
 
-
-
-.fadeInAnimation{
+.fadeInAnimation {
   animation: fade-in 1s ease-out 0s forwards;
   /* animation: fade-in  1s ease-in forwards infinite; */
 }
 
- .blankDiv{
-  background-color:black;
-  postion:absolute;
-  height:30vh;
-  top:0;
- 
-  
- }
-
 .circle {
-  height: 30vh;
-  width: 16vw;
   background-image: url("../assets/Images/Ellipse3.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: 80% 20%;
 }
 .vertical-line {
-  width: 2vw;
-  height: 30vh;
   background-image: url("../assets/Images/Rectangle1.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
 .horizontal-line {
-  width:4rem ;
-  height:20%;
   background-image: url("../assets/Images/Rectangle2.png");
   background-repeat: no-repeat;
-
 }
-
-
-
 
 .mySlides {
   display: flex;
@@ -77,7 +56,7 @@
   width: 151px;
   height: 12px;
   margin-top: 12px;
-  font-family: 'josefin';
+  font-family: "josefin";
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -88,13 +67,11 @@
   color: #787878;
 }
 
-
-
 .GetinTouch {
   width: 284px;
   height: 40px;
 
-  font-family: 'futura';
+  font-family: futura;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
@@ -105,7 +82,6 @@
 
   color: #000000;
 
-
   /* Inside auto layout */
 
   flex: none;
@@ -113,15 +89,12 @@
   flex-grow: 0;
 }
 
-
-
 .mobile {
-
   width: 61px;
   height: 16px;
   margin-top: 32px;
   margin-bottom: 12px;
-  font-family: 'josefin';
+  font-family: "josefin";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -132,21 +105,18 @@
 
   color: #000000;
 
-
   /* Inside auto layout */
 
   flex: none;
   order: 0;
   flex-grow: 0;
-
 }
 
 .email {
-
   width: 50px;
   height: 16px;
   margin-top: 32px;
-  font-family: 'josefin';
+  font-family: "josefin";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -157,30 +127,18 @@
 
   color: #000000;
 
-
   /* Inside auto layout */
 
   flex: none;
   order: 0;
   flex-grow: 0;
-
 }
-
-
-
-
-
 
 .carousel .control-dots .dot.selected,
 .carousel .control-dots .dot:hover {
   opacity: 1;
   filter: alpha(opacity=100);
 }
-
-
-
-
-
 
 .heroImg {
   width: 100vw;
@@ -407,8 +365,6 @@
 }
 
 @media (max-width: 768px) and (min-width: 600px) {
-
-
   .circle {
     position: absolute;
     bottom: 0;
@@ -421,9 +377,8 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
-  
+
   .vertical-line {
-    
     position: absolute;
     width: 2vw;
     height: 50vh;
@@ -441,37 +396,19 @@
     background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
     background-repeat: no-repeat;
     right: -2px;
-
-  
   }
-
-
-
-
-
-
-
-
-
-
-
-
 
   .headerNew {
     padding-left: 5px;
     height: 12vh;
     z-index: 40;
-
-
-
   }
-
 
   .GetinTouch {
     width: 284px;
     height: 40px;
 
-    font-family: 'futura';
+    font-family: "futura";
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -482,7 +419,6 @@
 
     color: #000000;
 
-
     /* Inside auto layout */
 
     flex: none;
@@ -490,15 +426,11 @@
     flex-grow: 0;
   }
 
-
-
-
-
   .emailaddress {
     width: 151px;
     height: 12px;
     margin-top: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -509,22 +441,18 @@
     color: #787878;
   }
 
-
-
   .mySlides {
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-
   .mobile {
-
     width: 61px;
     height: 16px;
     margin-top: 32px;
     margin-bottom: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -535,21 +463,18 @@
 
     color: #000000;
 
-
     /* Inside auto layout */
 
     flex: none;
     order: 0;
     flex-grow: 0;
-
   }
 
   .email {
-
     width: 50px;
     height: 16px;
     margin-top: 32px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -560,33 +485,18 @@
 
     color: #000000;
 
-
     /* Inside auto layout */
 
     flex: none;
     order: 0;
     flex-grow: 0;
-
   }
-
-
-
-
-
-
-
-    
-
-
-
 
   .LogoIMg {
     padding-top: 1.8rem;
   }
 
-
   .mobDropDown {
-    display: block;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -600,7 +510,7 @@
 
   .laptopCarousel {
     display: none;
-    z-index: index;
+    /* z-index: index; */
   }
 
   .mobCarousel {
@@ -635,7 +545,6 @@
 
   .card {
     width: 40vw;
-
   }
 
   .Sliding {
@@ -704,10 +613,6 @@
 }
 
 @media (max-width: 600px) {
-
-
-
-
   .circle {
     position: absolute;
     bottom: 0;
@@ -719,7 +624,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
   }
-  
+
   .vertical-line {
     position: absolute;
     width: 3vw;
@@ -738,9 +643,7 @@
     background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
     background-repeat: no-repeat;
     right: -26px;
-  
   }
-  
 
   .carousel .control-dots {
     position: absolute;
@@ -750,10 +653,7 @@
     text-align: center;
     width: 101%;
     z-index: 3;
-
   }
-
-
 
   .carousel .control-dots .dot {
     border: 5px solid orange;
@@ -761,8 +661,8 @@
     font-size: xx-large;
     width: 32px;
     height: 32px;
-    transition: opacity .25s ease-in;
-    opacity: .3;
+    transition: opacity 0.25s ease-in;
+    opacity: 0.3;
     filter: alpha(opacity=30);
     background-color: #f0b342;
 
@@ -771,22 +671,13 @@
     cursor: pointer;
     display: inline-block;
     margin: 32px 14px;
-    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+    box-shadow: var(--tw-ring-inset) 0 0 0
+      calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
   }
-
-
-
-
-
-
 
   .header {
     display: none;
   }
-
-
-
-
 
   .LogoIMg {
     padding-top: 1.8rem;
@@ -956,11 +847,9 @@
   .newSliding {
     display: none;
   }
-
 }
 
 @keyframes Slide {
-
   0% {
     transform: translateY(-40vh);
   }
@@ -980,37 +869,33 @@
   }
 }
 
-
 @keyframes fade-in {
-
-  0%{transform: translateX( 100%)}
-  60%{transform: translateX( 60%)}
-  100%{transform: translateX( 0)}
-
-  
- 
+  0% {
+    transform: translateX(100%);
+  }
+  60% {
+    transform: translateX(60%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
-
 
 @media (min-width: 1024px) {
+  .circle {
+    position: absolute;
+    bottom: 0;
+    right: 0px;
+    top: -230px;
+    height: 49vh;
+    width: 33vw;
+    background-image: url(/_next/static/media/Ellipse3.b015319f.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
 
-
-
-.circle {
-  position: absolute;
-  bottom: 0;
-  right: 0px;
-  top: -230px;
-  height: 49vh;
-  width: 33vw;
-  background-image: url(/_next/static/media/Ellipse3.b015319f.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-.vertical-line {
-  
-  position: absolute;
+  .vertical-line {
+    position: absolute;
     width: 2vw;
     height: 49vh;
     background-image: url(/_next/static/media/Rectangle2.96ea3249.png);
@@ -1018,19 +903,16 @@
     background-size: 100% 100%;
     right: 107px;
     top: -231px;
-}
-.horizontal-line {
-  position: absolute;
-  bottom: 85px;
-  width: 30.4vw;
-  height: 4vh;
-  background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
-  background-repeat: no-repeat;
-  right: 5px;
-
-}
-
-
+  }
+  .horizontal-line {
+    position: absolute;
+    bottom: 85px;
+    width: 30.4vw;
+    height: 4vh;
+    background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
+    background-repeat: no-repeat;
+    right: 5px;
+  }
 
   .mySlides {
     display: flex;
@@ -1039,10 +921,9 @@
   }
 
   .herotextTabP2 {
-
     height: 24px;
 
-    font-family: '';
+    font-family: "";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -1051,24 +932,20 @@
 
     letter-spacing: 0.05em;
 
-    color: #FFFFFF;
-
+    color: #ffffff;
   }
 
   .herotextTabP1 {
-
     height: 64px;
     margin-bottom: 5rem;
-    font-family: 'futura';
+    font-family: "futura";
     font-style: normal;
     font-weight: 700;
     font-size: 64px;
     line-height: 64px;
     /* identical to box height */
 
-
-    color: #FFFFFF;
-
+    color: #ffffff;
 
     /* Inside auto layout */
 
@@ -1076,84 +953,72 @@
     order: 0;
     flex-grow: 0;
   }
-
-
-
-
-  .emailaddress {
-    width: 151px;
-    height: 12px;
-     margin-top: 12px;
-    font-family: 'josefin';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 100%;
-    /* identical to box height, or 12px */
-
-    letter-spacing: 0.1em;
-    color: #787878;
-  }
-
-
-  .mobile {
-
-    width: 61px;
-    height: 16px;
-    margin-top: 32px;
-    margin-bottom: 12px;
-    font-family: 'josefin';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 100%;
-    /* identical to box height, or 16px */
-
-    letter-spacing: 0.1em;
-
-    color: #000000;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-
-  }
-
-  .email {
-
-    width: 50px;
-    height: 16px;
-    margin-top: 32px;
-    font-family: 'josefin';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 100%;
-    /* identical to box height, or 16px */
-
-    letter-spacing: 0.1em;
-
-    color: #000000;
-
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-
-  }
-
-
 
   .emailaddress {
     width: 151px;
     height: 12px;
     margin-top: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 100%;
+    /* identical to box height, or 12px */
+
+    letter-spacing: 0.1em;
+    color: #787878;
+  }
+
+  .mobile {
+    width: 61px;
+    height: 16px;
+    margin-top: 32px;
+    margin-bottom: 12px;
+    font-family: "josefin";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    /* identical to box height, or 16px */
+
+    letter-spacing: 0.1em;
+
+    color: #000000;
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  .email {
+    width: 50px;
+    height: 16px;
+    margin-top: 32px;
+    font-family: "josefin";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 100%;
+    /* identical to box height, or 16px */
+
+    letter-spacing: 0.1em;
+
+    color: #000000;
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+  }
+
+  .emailaddress {
+    width: 151px;
+    height: 12px;
+    margin-top: 12px;
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -1164,7 +1029,6 @@
 
     color: #787878;
   }
-
 
   .carousel .control-dots {
     position: absolute;
@@ -1177,16 +1041,14 @@
     left: -32rem;
   }
 
-
-
   .carousel .control-dots .dot {
     border: 12px solid orange;
     color: #f0b342;
     font-size: xx-large;
     width: 32px;
     height: 32px;
-    transition: opacity .25s ease-in;
-    opacity: .3;
+    transition: opacity 0.25s ease-in;
+    opacity: 0.3;
     filter: alpha(opacity=30);
     background-color: #f0b342;
 
@@ -1195,7 +1057,8 @@
     cursor: pointer;
     display: inline-block;
     margin: 32px 14px;
-    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+    box-shadow: var(--tw-ring-inset) 0 0 0
+      calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
   }
 
   .carousel .control-dots .dot.selected,
@@ -1216,7 +1079,6 @@
     padding-right: 15px;
   }
 
-
   .LogoIMg {
     width: 10vw;
   }
@@ -1224,18 +1086,11 @@
   .card {
     margin-left: 12.5rem;
   }
-
-
 }
 
-
 @media (min-width: 1440px) {
-
-
-
-  
-.circle {
-  position: absolute;
+  .circle {
+    position: absolute;
     bottom: 0;
     right: -2px;
     top: -219px;
@@ -1244,10 +1099,10 @@
     background-image: url(/_next/static/media/Ellipse3.b015319f.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
-}
+  }
 
-.vertical-line {
-  position: absolute;
+  .vertical-line {
+    position: absolute;
     width: 1vw;
     height: 45vh;
     background-image: url(/_next/static/media/Rectangle2.96ea3249.png);
@@ -1255,21 +1110,16 @@
     background-size: 100% 100%;
     right: 107px;
     top: -219px;
-}
-.horizontal-line {
-  position: absolute;
+  }
+  .horizontal-line {
+    position: absolute;
     bottom: 40px;
     width: 24.5vw;
     height: 2vh;
     background-image: url(/_next/static/media/Rectangle1.c8859e7f.png);
     background-repeat: no-repeat;
     right: 0px;
-  
-    ;
-
-}
-
-
+  }
 
   .mySlides {
     display: flex;
@@ -1277,13 +1127,10 @@
     align-items: center;
   }
 
-
-
   .herotextTabP2 {
-
     height: 24px;
 
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -1292,25 +1139,20 @@
 
     letter-spacing: 0.05em;
 
-    color: #FFFFFF;
-
+    color: #ffffff;
   }
 
-
   .herotextTabP1 {
-
     height: 64px;
     margin-bottom: 2rem;
-    font-family: 'futura';
+    font-family: "futura";
     font-style: normal;
     font-weight: 700;
     font-size: 64px;
     line-height: 64px;
     /* identical to box height */
 
-
-    color: #FFFFFF;
-
+    color: #ffffff;
 
     /* Inside auto layout */
 
@@ -1319,13 +1161,11 @@
     flex-grow: 0;
   }
 
-
-
   .emailaddress {
     width: 151px;
     height: 12px;
     margin-top: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -1336,14 +1176,12 @@
     color: #787878;
   }
 
-
   .mobile {
-
     width: 61px;
     height: 16px;
     margin-top: 32px;
     margin-bottom: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -1354,21 +1192,18 @@
 
     color: #000000;
 
-
     /* Inside auto layout */
 
     flex: none;
     order: 0;
     flex-grow: 0;
-
   }
 
   .email {
-
     width: 50px;
     height: 16px;
     margin-top: 32px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -1379,22 +1214,18 @@
 
     color: #000000;
 
-
     /* Inside auto layout */
 
     flex: none;
     order: 0;
     flex-grow: 0;
-
   }
-
-
 
   .emailaddress {
     width: 151px;
     height: 12px;
     margin-top: 12px;
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -1410,7 +1241,7 @@
     width: 151px;
     height: 12px;
 
-    font-family: 'josefin';
+    font-family: "josefin";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -1422,12 +1253,11 @@
     color: #787878;
   }
 
-
   .GetinTouch {
     width: 284px;
     height: 40px;
 
-    font-family: 'futura';
+    font-family: "futura";
     font-style: normal;
     font-weight: 700;
     font-size: 40px;
@@ -1437,7 +1267,6 @@
     letter-spacing: 0.1em;
 
     color: #000000;
-
 
     /* Inside auto layout */
 
@@ -1454,10 +1283,7 @@
     text-align: center;
     width: 101%;
     z-index: 3;
-
   }
-
-
 
   .carousel .control-dots .dot {
     border: 12px solid orange;
@@ -1465,8 +1291,8 @@
     font-size: xx-large;
     width: 32px;
     height: 32px;
-    transition: opacity .25s ease-in;
-    opacity: .3;
+    transition: opacity 0.25s ease-in;
+    opacity: 0.3;
     filter: alpha(opacity=30);
     background-color: #f0b342;
 
@@ -1475,21 +1301,15 @@
     cursor: pointer;
     display: inline-block;
     margin: 32px 14px;
-    box-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
+    box-shadow: var(--tw-ring-inset) 0 0 0
+      calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-offset-color);
   }
-
-
-
 
   .carousel .control-dots .dot.selected,
   .carousel .control-dots .dot:hover {
     opacity: 2;
     filter: alpha(opacity=100);
   }
-
-
-
-
 
   .headerNew {
     gap: 26rem;
@@ -1503,20 +1323,14 @@
     padding-right: 10px;
   }
 
-
   .LogoIMg {
-    width: 12vw
+    width: 12vw;
   }
 
   .card {
     margin-left: 12.5rem;
   }
-
-
-
-
 }
-
 
 /* carsoul............................................................................................................................................... */
 /* carsoul............................................................................................................................................... */
@@ -1537,24 +1351,21 @@
 /* carsoul............................................................................................................................................... */
 /* carsoul............................................................................................................................................... */
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 body {
   font-family: Verdana, sans-serif;
-  margin: 0
+  margin: 0;
 }
 
 .mySlides {
-  display: none
+  display: none;
 }
 
 img {
   vertical-align: middle;
 }
-
-
-
 
 .mySlides {
   display: flex;
@@ -1643,20 +1454,19 @@ img {
 
 @keyframes fade {
   from {
-    opacity: .4
+    opacity: 0.4;
   }
 
   to {
-    opacity: 1
+    opacity: 1;
   }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-
   .prev,
   .next,
   .text {
-    font-size: 11px
+    font-size: 11px;
   }
 }
