--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,19 +28,144 @@
 
 
 
+
+  
+
+* {
+  box-sizing: border-box
+}
+
+body {
+  font-family: Verdana, sans-serif;
+  margin: 0
+}
+
+.mySlides {
+  display: none
+}
+
+img {
+  vertical-align: middle;
+}
+
+
+
+
+.mySlides {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+
+  .prev,
+  .next,
+  .text {
+    font-size: 11px
+  }
+}
+
+
 .fadeInAnimation{
   animation: fade-in 1s ease-out 0s forwards;
   /* animation: fade-in  1s ease-in forwards infinite; */
 }
 
- .blankDiv{
-  background-color:black;
-  postion:absolute;
-  height:30vh;
-  top:0;
+ 
  
   
- }
+ 
 
 .circle {
   height: 30vh;
@@ -179,7 +304,11 @@
 
 
 
-
+.BlankDiv{
+  background-color: rgba(255, 255, 255, 0.4);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
 
 
 .heroImg {
@@ -188,6 +317,7 @@
   background-image: url("../assets/Images/heroBackground.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+ 
 }
 
 .heroImgTwo {
@@ -196,6 +326,7 @@
   background-image: url("../assets/Images/six.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+
 }
 
 .heroImgThree {
@@ -204,6 +335,7 @@
   background-image: url("../assets/Images/three.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+ 
 }
 
 .heroImgFour {
@@ -212,6 +344,8 @@
   background-image: url("../assets/Images/two.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+ 
+ 
 }
 
 .mobCarousel {
@@ -1174,7 +1308,7 @@
     text-align: center;
     width: 101%;
     z-index: 3;
-    left: -32rem;
+    left: -19rem;
   }
 
 
@@ -1226,12 +1360,55 @@
   }
 
 
+  .rightDiv{
+    transform: -translateY(7rem);
+  }
+
 }
 
+
+
+
+
+
+@media  (min-width: 768px) and (max-width: 1024px)  {
+
+.Navbar{
+  display:flex;
+  justify-content:space-between;
+  
+
+  padding-top:32px;
+  padding-left:23px;
+  padding-right:23px;
+  border:2px solid red;
+  height:15vh;
+}
+
+
+.logo{
+  width: 72px;
+  
+  
+  
+
+}
+
+.right-side{
+  gap:2rem;
+
+
+}
+
+
+ 
 
 @media (min-width: 1440px) {
 
 
+
+
+}
 
   
 .circle {
@@ -1536,127 +1713,4 @@
 /* carsoul............................................................................................................................................... */
 /* carsoul............................................................................................................................................... */
 /* carsoul............................................................................................................................................... */
-* {
-  box-sizing: border-box
-}
 
-body {
-  font-family: Verdana, sans-serif;
-  margin: 0
-}
-
-.mySlides {
-  display: none
-}
-
-img {
-  vertical-align: middle;
-}
-
-
-
-
-.mySlides {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-
-  .prev,
-  .next,
-  .text {
-    font-size: 11px
-  }
-}
